<resources>
    <string name="app_name">Carteam</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="password_hint">请输入密码</string>
    <string name="agree_msg">点击注册便默认同意《享包车平台注册协议》</string>
    <string name="account_hint">请输入账号</string>
    <string name="get_cap">获取验证码</string>
    <string name="input_captcha">输入验证码</string>
    <string name="act_car_team_des">您正在进行车队入驻，请完成一下内容后提交审核，审核成功将以短信形式通知您。</string>
    <string name="responInfo">填写负责人信息</string>
    <string name="carteamInfo">填写车队信息</string>
    <string name="vehicleInfo">填写车辆信息</string>
    <string name="driverInfo">填写司机信息</string>


    <string name="err_userid">用户id错误</string>
    <string name="err_name">格式错误</string>
    <string name="err_no_empty">格式不能为空</string>
    <string name="err_email">邮箱格式错误</string>
    <string name="err_tel">电话格式错误</string>
    <string name="err_zipcode">编码错误</string>
    <string name="err_year">年份错误</string>
    <string name="network_not_connection">网络未响应</string>
    <string name="not_connected">网络未连接</string>
    <string name="quote_str">包车报价</string>
    <string name="scar_missauga_str">发布顺风车</string>
    <string name="replace_driver_str">更换司机</string>
    <string name="_replace_vehicle_str">更换车辆</string>
    <string name="cancel">取消</string>
    <string name="about">关于我们</string>
    <string name="soft_eva">软件评价</string>
    <string name="clear_cache">清除缓存</string>
    <string name="order_guide">接单指南</string>
    <string name="faq">常见问题</string>
    <string name="car_level">等级规定</string>
    <string name="membership_agreement">会员协议</string>
    <string name="over_travel_bill">超行程费用参考</string>
    <string name="privacy_policy">隐私条款</string>

    <style name="btn_ok">确认</style>


    <string name="eva_good">很好，值得推荐！</string>
    <string name="eva_general">一般，可以尝试～</string>
    <string name="eva_bad">失望，不再光顾...</string>
    <string name="eva_ver_bad">糟糕，糟糕透顶！</string>
    <string name="eva_please">请评价</string>

    <string name="study"><u>立即学习</u></string>
    <string name="describe">初始总分＝0，完成加分项总分上限可升至12 违规或者被投诉，会扣除相应分值 总分＝0，禁止接单。</string>
    <string name="describe_level">等级无封顶，十分为一个等级
参与投标得2分(包括：顺风车、快车、发布需求)
中标得3分，逃标则享等级直接降1级。</string>
</resources>
