<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    android:orientation="vertical"
    >

    <www.lvchehui.com.carteam.view.TitleView
        android:id="@+id/title_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8.0dip"
        android:background="@color/white"
        android:orientation="vertical">

        <View style="@style/lineSolid" />



        <LinearLayout
            android:id="@+id/ll_about"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_white_gray"
            android:gravity="center_vertical"
            android:minHeight="48.0dip"
            android:paddingLeft="10.0dip"
            android:paddingRight="10.0dip">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:src="@mipmap/item_back_icon" />

            <TextView
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/about"
                android:textColor="@color/text_default_color"
                android:textSize="15.0sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/item_back_icon" />
        </LinearLayout>
        <View
            style="@style/lineSolid"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp" />

        <LinearLayout
            android:id="@+id/ll_soft_eva"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_white_gray"
            android:gravity="center_vertical"
            android:minHeight="48.0dip"
            android:paddingLeft="10.0dip"
            android:paddingRight="10.0dip">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/soft_eva"
                android:textColor="@color/text_default_color"
                android:textSize="15.0sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/item_back_icon"
                android:contentDescription="@string/app_name" />
        </LinearLayout>
        <View
            style="@style/lineSolid"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp" />

        <LinearLayout
            android:id="@+id/ll_clear_cache"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_white_gray"
            android:gravity="center_vertical"
            android:minHeight="48.0dip"
            android:paddingLeft="10.0dip"
            android:paddingRight="10.0dip">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:src="@mipmap/item_back_icon" />
            <!--@string/clear_cache-->
            <TextView
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text= "@string/clear_cache"
                android:textColor="@color/text_default_color"
                android:textSize="15.0sp" />

            <TextView
                android:id="@+id/tv_cache_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/item_back_icon" />
        </LinearLayout>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        />
    <include
        layout="@layout/include_btn_submit"
        />
</LinearLayout>