<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    android:orientation="vertical">

    <www.lvchehui.com.carteam.view.TitleView
        android:id="@+id/title_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical"
        android:padding="10dp">

        <RelativeLayout
            android:id="@+id/rl_quote"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/selector_large_edit_dialog_white"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_quote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@drawable/text_bla_yel_selector"
                android:layout_centerInParent="true"
                android:text="@string/quote_str"
                android:layout_marginTop="10dp"
                android:textSize="@dimen/text_default_size" />

            <ImageView
                android:id="@+id/iv_quote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/manager_repl_queto_icon"
                android:layout_centerInParent="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_above="@+id/tv_quote"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_scar_missauga"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/selector_large_edit_dialog_white"
            android:gravity="center">


            <TextView
                android:id="@+id/tv_scar_missauga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@drawable/text_bla_yel_selector"
                android:layout_centerInParent="true"
                android:text="@string/scar_missauga_str"
                android:layout_marginTop="10dp"
                android:textSize="@dimen/text_default_size" />

            <ImageView
                android:id="@+id/iv_scar_missauga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/manager_repl_ride_icon"
                android:layout_centerInParent="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_above="@+id/tv_scar_missauga"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rl_replace_driver"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/selector_large_edit_dialog_white"
            android:gravity="center">


            <TextView
                android:id="@+id/tv_replace_driver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@drawable/text_bla_yel_selector"
                android:layout_centerInParent="true"
                android:text="@string/replace_driver_str"
                android:layout_marginTop="10dp"
                android:textSize="@dimen/text_default_size" />

            <ImageView
                android:id="@+id/iv_replace_driver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/manager_repl_drivel_icon"
                android:layout_centerInParent="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_above="@+id/tv_replace_driver"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rl_replace_vehicle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/selector_large_edit_dialog_white"
            android:gravity="center">


            <TextView
                android:id="@+id/tv_replace_vehicle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@drawable/text_bla_yel_selector"
                android:layout_centerInParent="true"
                android:layout_marginTop="10dp"
                android:text="@string/_replace_vehicle_str"
                android:textSize="@dimen/text_default_size" />

            <ImageView
                android:id="@+id/iv_replace_vehicle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/manager_repl_veh_icon"
                android:layout_centerInParent="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_above="@+id/tv_replace_vehicle"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            />
    </LinearLayout>
</LinearLayout>
