<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    android:orientation="vertical">

    <www.lvchehui.com.carteam.view.TitleView
        android:id="@+id/title_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:text="@string/act_car_team_des"
        android:textSize="@dimen/text_middle_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical"
        android:padding="10dp">

        <RelativeLayout
            android:id="@+id/rl_responInfo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/selector_large_edit_dialog_white2"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_responInfo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@drawable/text_bla_yel_selector"
                android:text="@string/responInfo"
                android:textSize="@dimen/title_text_size" />

            <ImageView
                android:id="@+id/iv_responInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_margin="10dp"
                android:src="@mipmap/item_yes_icon"
                android:visibility="gone" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"
                android:src="@mipmap/cre_car_team_icon_1"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_below="@+id/iv_responInfo"
                android:layout_toEndOf="@+id/iv_responInfo" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_carTeamInfo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/selector_large_edit_dialog_white2"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_carTeamInfo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/carteamInfo"
                android:textColor="@drawable/text_bla_yel_selector"
                android:textSize="@dimen/title_text_size" />

            <ImageView
                android:id="@+id/iv_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_margin="10dp"
                android:src="@mipmap/item_yes_icon"
                android:visibility="gone" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView2"
                android:src="@mipmap/cre_car_team_icon_2"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_vehicleInfo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/selector_large_edit_dialog_white2"
            android:gravity="center">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                >
                <TextView
                    android:id="@+id/tv_vehicleInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/vehicleInfo"
                    android:textColor="@drawable/text_bla_yel_selector"
                    android:textSize="@dimen/title_text_size" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="车辆数较多建议通过网站进行批量填写"
                    android:id="@+id/textView"
                    android:gravity="center"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/text_hint_color"
                    android:textSize="@dimen/text_middle_size"
                    android:layout_below="@+id/tv_vehicleInfo"
                    android:layout_alignStart="@+id/tv_vehicleInfo" />
                <ImageView
                    android:id="@+id/iv_application"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:layout_margin="10dp"
                    android:src="@mipmap/item_yes_icon"
                    android:visibility="gone" />

            </RelativeLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView3"
                android:src="@mipmap/cre_car_team_icon_3"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_driverInfo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/selector_large_edit_dialog_white2"
            android:gravity="center">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            >
            <TextView
                android:id="@+id/tv_driverInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/driverInfo"
                android:textColor="@drawable/text_bla_yel_selector"
                android:textSize="@dimen/title_text_size" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="请填写车队所有司机信息"
                android:id="@+id/textView2"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:textColor="@color/text_hint_color"
                android:textSize="@dimen/text_middle_size"
                android:layout_below="@+id/tv_driverInfo"
                android:layout_alignStart="@+id/tv_driverInfo" />

            <ImageView
                android:id="@+id/iv_driverInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_margin="10dp"
                android:src="@mipmap/item_yes_icon"
                android:visibility="gone"
               />


        </RelativeLayout>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView5"
                android:src="@mipmap/cre_car_team_icon_4"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true" />
        </RelativeLayout>
    </LinearLayout>
    <include layout="@layout/include_btn_submit" />
</LinearLayout>
